api/src/routes/snapshots/nightlio_api__routes__goals__tests__goal-completions-200.snap
---
source: src/routes/goals.rs
expression: "json!({ \"status\": expected_status, \"body\": actual })"
---
{
  "body": [
    {
      "date": "<DATE>"
    },
    {
      "date": "<DATE>"
    }
  ],
  "status": 200
}
