api/src/routes/snapshots/nightlio_api__routes__goals__tests__goal-completions-401.snap
---
source: src/routes/goals.rs
expression: "json!({ \"status\": expected_status, \"body\": actual })"
---
{
  "body": {
    "error": "Authorization header required"
  },
  "status": 401
}
