api/src/routes/snapshots/nightlio_api__routes__goals__tests__goal-get-404.snap
---
source: src/routes/goals.rs
expression: "json!({ \"status\": expected_status, \"body\": actual })"
---
{
  "body": {
    "error": "Not found"
  },
  "status": 404
}
