api/src/routes/snapshots/nightlio_api__routes__goals__tests__goal-progress-400-bad-date.snap
---
source: src/routes/goals.rs
expression: "json!({ \"status\": expected_status, \"body\": actual })"
---
{
  "body": {
    "error": "date must be YYYY-MM-DD or M/D/YYYY"
  },
  "status": 400
}
