api/src/routes/snapshots/nightlio_api__routes__goals__tests__goal-put-200.snap
---
source: src/routes/goals.rs
expression: "json!({ \"status\": expected_status, \"body\": actual })"
---
{
  "body": {
    "status": "ok"
  },
  "status": 200
}
