api/src/routes/snapshots/nightlio_api__routes__goals__tests__goal-update-400-bad-frequency.snap
---
source: src/routes/goals.rs
expression: "json!({ \"status\": expected_status, \"body\": actual })"
---
{
  "body": {
    "error": "frequency_per_week must be between 1 and 7"
  },
  "status": 400
}
