api/src/routes/snapshots/nightlio_api__routes__goals__tests__goal-update-400-blank-title.snap
---
source: src/routes/goals.rs
expression: "json!({ \"status\": 400, \"body\": body })"
---
{
  "body": {
    "error": "Title is required"
  },
  "status": 400
}
